fixed layout bugginess, better loading of data

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,19 +16,8 @@
     color: black !important;
     font-weight: 400;
   }
-  #search-input {
-    font-size:15px !important;
-    box-sizing: border-box;
-    width: 100%;
-    height: 62px;
-    padding: 0 45px 0 0;
-  
-  }
   .search {
-    position:absolute;
-    align-self: center;
     cursor: pointer;
-    padding: 20px 20px 0 0 ;
   }
   .hideMe {
     display: none !important;
@@ -134,8 +123,9 @@
     border: 0 !important; 
   }
   .tabulator-col-title {
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: 800;
+    letter-spacing: -0.02em;
     opacity: 0.75;
     text-transform: uppercase !important; 
   }
@@ -156,6 +146,9 @@
   }
   .tabulator-col-resize-handle {
    border: 0;
+  }
+  .tabulator {
+    font-size: 1.5rem !important;
   }
   #example-table {
     border: 0;
@@ -329,7 +322,7 @@
   }
 
   .padding {
-    padding: 20px;
+    padding-top: 3%;
   }
 
   .alert {
